src/objects/NonFieldDay__c.object
<CustomObject>
    <description>Used to track the time NOT spent on the field</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Used to set the date of the Field Day</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Type__c</fullName>
        <description>Concatenates Field Day Type and Reason for not having full field day in one field for Calendar visibility</description>
        <formula>TEXT(NonFieldDayType__c ) +&quot; - &quot; +  TEXT(Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonFieldDayType__c</fullName>
        <label>Non Field Day Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Day</fullName>
                </value>
                <value>
                    <fullName>Half Day</fullName>
                </value>
                <value>
                    <fullName>1/4 Day</fullName>
                </value>
                <value>
                    <fullName>3/4 day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NonFieldDay__c</fullName>
        <formula>CASE(NonFieldDayType__c,
&quot;1/4 Day&quot;,0.25,
&quot;Half Day&quot;,0.50,
&quot;3/4 Day&quot;,0.75,
&quot;Full Day&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Field Day (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Holiday</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>External Event</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Internal Meetings</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Non Field Day</label>
    <nameField>
        <displayFormat>FD-{000000}</displayFormat>
        <label>Non Field Days Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Field Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>